--- a/STM32H747I-DISCO.ioc
+++ b/STM32H747I-DISCO.ioc
@@ -38,7 +38,7 @@ CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region4_Settings=MPU_REGION_SIZE_25
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region5_Settings=MPU_REGION_SIZE_32KB
 CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,UART8\:I
 CortexM4.Pins=PI13
-CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,FMC\:I,QUADSPI\:I,DMA2D\:I,DSIHOST\:I,LTDC\:I,CRC\:I,TIM6\:I,STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7\:I,USART1\:I
+CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,FMC\:I,QUADSPI\:I,DMA2D\:I,DSIHOST\:I,LTDC\:I,CRC\:I,TIM6\:I,STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7\:I,USART1\:I,USART3\:I
 CortexM7.Pins=PJ12,PI12,PG3
 DMA2D.ColorMode=DMA2D_OUTPUT_RGB888
 DMA2D.IPParameters=ColorMode,Mode
@@ -124,7 +124,7 @@ Mcu.IP10=RCC
 Mcu.IP11=SYS_M4
 Mcu.IP12=SYS
 Mcu.IP13=UART8
-Mcu.IP14=USART1
+Mcu.IP14=USART3
 Mcu.IP2=CRC
 Mcu.IP3=DMA2D
 Mcu.IP4=DSIHOST
@@ -197,39 +197,41 @@ Mcu.Pin60=PF13
 Mcu.Pin61=PF14
 Mcu.Pin62=PE9
 Mcu.Pin63=PE11
-Mcu.Pin64=PH10
-Mcu.Pin65=PH11
-Mcu.Pin66=PD15
-Mcu.Pin67=PD14
-Mcu.Pin68=PB2
-Mcu.Pin69=PF12
+Mcu.Pin64=PB10
+Mcu.Pin65=PB11
+Mcu.Pin66=PH10
+Mcu.Pin67=PH11
+Mcu.Pin68=PD15
+Mcu.Pin69=PD14
 Mcu.Pin7=PE1
-Mcu.Pin70=PF15
-Mcu.Pin71=PE12
-Mcu.Pin72=PE15
-Mcu.Pin73=PH9
-Mcu.Pin74=PH12
-Mcu.Pin75=PD11
-Mcu.Pin76=PJ2
-Mcu.Pin77=PF11
-Mcu.Pin78=PG0
-Mcu.Pin79=PE8
+Mcu.Pin70=PB2
+Mcu.Pin71=PF12
+Mcu.Pin72=PF15
+Mcu.Pin73=PE12
+Mcu.Pin74=PE15
+Mcu.Pin75=PH9
+Mcu.Pin76=PH12
+Mcu.Pin77=PD11
+Mcu.Pin78=PJ2
+Mcu.Pin79=PF11
 Mcu.Pin8=PI2
-Mcu.Pin80=PE13
-Mcu.Pin81=PH8
-Mcu.Pin82=PD10
-Mcu.Pin83=PD9
-Mcu.Pin84=PE7
-Mcu.Pin85=PE14
-Mcu.Pin86=PD8
-Mcu.Pin87=VP_CRC_VS_CRC
-Mcu.Pin88=VP_DMA2D_VS_DMA2D
-Mcu.Pin89=VP_LTDC_DSIMode
+Mcu.Pin80=PG0
+Mcu.Pin81=PE8
+Mcu.Pin82=PE13
+Mcu.Pin83=PH8
+Mcu.Pin84=PD10
+Mcu.Pin85=PD9
+Mcu.Pin86=PE7
+Mcu.Pin87=PE14
+Mcu.Pin88=PD8
+Mcu.Pin89=VP_CRC_VS_CRC
 Mcu.Pin9=PH15
-Mcu.Pin90=VP_SYS_VS_tim6
-Mcu.Pin91=VP_SYS_M4_VS_Systick
-Mcu.Pin92=VP_STMicroelectronics.X-CUBE-TOUCHGFX_M7_VS_GraphicsJjApplication_4.17.0
-Mcu.PinsNb=93
+Mcu.Pin90=VP_DMA2D_VS_DMA2D
+Mcu.Pin91=VP_LTDC_DSIMode
+Mcu.Pin92=VP_SYS_VS_tim6
+Mcu.Pin93=VP_SYS_M4_VS_Systick
+Mcu.Pin94=VP_STMicroelectronics.X-CUBE-TOUCHGFX_M7_VS_GraphicsJjApplication_4.17.0
+Mcu.PinsNb=95
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0
 Mcu.ThirdParty0_ContextShortName=M7
 Mcu.ThirdParty0_Instance=STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7
@@ -251,7 +253,7 @@ NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.SysTick_IRQn=true\:3\:0\:true\:false\:true\:false\:true
-NVIC1.TIM6_DAC_IRQn=true\:3\:0\:true\:false\:true\:false\:true
+NVIC1.TIM6_DAC_IRQn=true\:15\:0\:true\:false\:true\:false\:true
 NVIC1.TimeBase=TIM6_DAC_IRQn
 NVIC1.TimeBaseIP=TIM6
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -268,7 +270,6 @@ NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA10.GPIOParameters=PinAttribute
 PA10.Locked=true
-PA10.Mode=Asynchronous
 PA10.PinAttribute=CortexM7
 PA10.Signal=USART1_RX
 PA8.GPIOParameters=PinAttribute
@@ -277,9 +278,18 @@ PA8.PinAttribute=CortexM7
 PA8.Signal=RCC_MCO_1
 PA9.GPIOParameters=PinAttribute
 PA9.Locked=true
-PA9.Mode=Asynchronous
 PA9.PinAttribute=CortexM7
 PA9.Signal=USART1_TX
+PB10.GPIOParameters=PinAttribute
+PB10.Locked=true
+PB10.Mode=Asynchronous
+PB10.PinAttribute=CortexM7
+PB10.Signal=USART3_TX
+PB11.GPIOParameters=PinAttribute
+PB11.Locked=true
+PB11.Mode=Asynchronous
+PB11.PinAttribute=CortexM7
+PB11.Signal=USART3_RX
 PB2.GPIOParameters=PinAttribute
 PB2.Locked=true
 PB2.Mode=Dual_Bank
@@ -802,8 +812,8 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7.tgfx_location=By Address
 STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7.tgfx_pixel_format=RGB888\:24
 STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
 SYS.userName=SYS_M7
-USART1.IPParameters=VirtualMode-Asynchronous
-USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
