--- a/STM32H747I-DISCO.ioc
+++ b/STM32H747I-DISCO.ioc
@@ -253,10 +253,10 @@ NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.SysTick_IRQn=true\:3\:0\:true\:false\:true\:false\:true
-NVIC1.TIM6_DAC_IRQn=true\:15\:0\:true\:false\:true\:false\:true
+NVIC1.TIM6_DAC_IRQn=true\:3\:0\:true\:false\:true\:false\:true
 NVIC1.TimeBase=TIM6_DAC_IRQn
 NVIC1.TimeBaseIP=TIM6
-NVIC1.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC1.USART3_IRQn=true\:7\:0\:true\:false\:true\:true\:true
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -268,6 +268,7 @@ NVIC2.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC2.UART8_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA10.GPIOParameters=PinAttribute
 PA10.Locked=true
@@ -600,7 +601,7 @@ ProjectManager.StackSize=M4-0x1000,M7-0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-true-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_CRC_Init-CRC-false-HAL-true-CortexM7,4-MX_FMC_Init-FMC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,7-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true-CortexM7,8-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,9-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,11-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7-false-HAL-false-CortexM7,false-12-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_UART8_Init-UART8-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-true-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_CRC_Init-CRC-false-HAL-true-CortexM7,4-MX_FMC_Init-FMC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,7-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true-CortexM7,8-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,9-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,10-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7-false-HAL-false-CortexM7,false-11-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_UART8_Init-UART8-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 QUADSPI.ClockPrescaler=3
 QUADSPI.IPParameters=ClockPrescaler
 RCC.ADCFreq_Value=50390625
