--- a/STM32H747I-DISCO.ioc
+++ b/STM32H747I-DISCO.ioc
@@ -124,7 +124,7 @@ Mcu.IP10=RCC
 Mcu.IP11=SYS_M4
 Mcu.IP12=SYS
 Mcu.IP13=UART8
-Mcu.IP14=USART3
+Mcu.IP14=USART1
 Mcu.IP2=CRC
 Mcu.IP3=DMA2D
 Mcu.IP4=DSIHOST
@@ -197,41 +197,39 @@ Mcu.Pin60=PF13
 Mcu.Pin61=PF14
 Mcu.Pin62=PE9
 Mcu.Pin63=PE11
-Mcu.Pin64=PB10
-Mcu.Pin65=PB11
-Mcu.Pin66=PH10
-Mcu.Pin67=PH11
-Mcu.Pin68=PD15
-Mcu.Pin69=PD14
+Mcu.Pin64=PH10
+Mcu.Pin65=PH11
+Mcu.Pin66=PD15
+Mcu.Pin67=PD14
+Mcu.Pin68=PB2
+Mcu.Pin69=PF12
 Mcu.Pin7=PE1
-Mcu.Pin70=PB2
-Mcu.Pin71=PF12
-Mcu.Pin72=PF15
-Mcu.Pin73=PE12
-Mcu.Pin74=PE15
-Mcu.Pin75=PH9
-Mcu.Pin76=PH12
-Mcu.Pin77=PD11
-Mcu.Pin78=PJ2
-Mcu.Pin79=PF11
+Mcu.Pin70=PF15
+Mcu.Pin71=PE12
+Mcu.Pin72=PE15
+Mcu.Pin73=PH9
+Mcu.Pin74=PH12
+Mcu.Pin75=PD11
+Mcu.Pin76=PJ2
+Mcu.Pin77=PF11
+Mcu.Pin78=PG0
+Mcu.Pin79=PE8
 Mcu.Pin8=PI2
-Mcu.Pin80=PG0
-Mcu.Pin81=PE8
-Mcu.Pin82=PE13
-Mcu.Pin83=PH8
-Mcu.Pin84=PD10
-Mcu.Pin85=PD9
-Mcu.Pin86=PE7
-Mcu.Pin87=PE14
-Mcu.Pin88=PD8
-Mcu.Pin89=VP_CRC_VS_CRC
+Mcu.Pin80=PE13
+Mcu.Pin81=PH8
+Mcu.Pin82=PD10
+Mcu.Pin83=PD9
+Mcu.Pin84=PE7
+Mcu.Pin85=PE14
+Mcu.Pin86=PD8
+Mcu.Pin87=VP_CRC_VS_CRC
+Mcu.Pin88=VP_DMA2D_VS_DMA2D
+Mcu.Pin89=VP_LTDC_DSIMode
 Mcu.Pin9=PH15
-Mcu.Pin90=VP_DMA2D_VS_DMA2D
-Mcu.Pin91=VP_LTDC_DSIMode
-Mcu.Pin92=VP_SYS_VS_tim6
-Mcu.Pin93=VP_SYS_M4_VS_Systick
-Mcu.Pin94=VP_STMicroelectronics.X-CUBE-TOUCHGFX_M7_VS_GraphicsJjApplication_4.17.0
-Mcu.PinsNb=95
+Mcu.Pin90=VP_SYS_VS_tim6
+Mcu.Pin91=VP_SYS_M4_VS_Systick
+Mcu.Pin92=VP_STMicroelectronics.X-CUBE-TOUCHGFX_M7_VS_GraphicsJjApplication_4.17.0
+Mcu.PinsNb=93
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0
 Mcu.ThirdParty0_ContextShortName=M7
 Mcu.ThirdParty0_Instance=STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7
@@ -256,7 +254,7 @@ NVIC1.SysTick_IRQn=true\:3\:0\:true\:false\:true\:false\:true
 NVIC1.TIM6_DAC_IRQn=true\:3\:0\:true\:false\:true\:false\:true
 NVIC1.TimeBase=TIM6_DAC_IRQn
 NVIC1.TimeBaseIP=TIM6
-NVIC1.USART3_IRQn=true\:7\:0\:true\:false\:true\:true\:true
+NVIC1.USART1_IRQn=true\:7\:0\:true\:false\:true\:true\:true
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -272,6 +270,7 @@ NVIC2.UART8_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA10.GPIOParameters=PinAttribute
 PA10.Locked=true
+PA10.Mode=Asynchronous
 PA10.PinAttribute=CortexM7
 PA10.Signal=USART1_RX
 PA8.GPIOParameters=PinAttribute
@@ -280,18 +279,9 @@ PA8.PinAttribute=CortexM7
 PA8.Signal=RCC_MCO_1
 PA9.GPIOParameters=PinAttribute
 PA9.Locked=true
+PA9.Mode=Asynchronous
 PA9.PinAttribute=CortexM7
 PA9.Signal=USART1_TX
-PB10.GPIOParameters=PinAttribute
-PB10.Locked=true
-PB10.Mode=Asynchronous
-PB10.PinAttribute=CortexM7
-PB10.Signal=USART3_TX
-PB11.GPIOParameters=PinAttribute
-PB11.Locked=true
-PB11.Mode=Asynchronous
-PB11.PinAttribute=CortexM7
-PB11.Signal=USART3_RX
 PB2.GPIOParameters=PinAttribute
 PB2.Locked=true
 PB2.Mode=Dual_Bank
@@ -601,7 +591,7 @@ ProjectManager.StackSize=M4-0x1000,M7-0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-true-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_CRC_Init-CRC-false-HAL-true-CortexM7,4-MX_FMC_Init-FMC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,7-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true-CortexM7,8-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,9-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,10-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7-false-HAL-false-CortexM7,false-11-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_UART8_Init-UART8-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-true-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_CRC_Init-CRC-false-HAL-true-CortexM7,4-MX_FMC_Init-FMC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,7-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true-CortexM7,8-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,9-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,11-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7-false-HAL-false-CortexM7,false-12-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_UART8_Init-UART8-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 QUADSPI.ClockPrescaler=3
 QUADSPI.IPParameters=ClockPrescaler
 RCC.ADCFreq_Value=50390625
@@ -814,8 +804,8 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7.tgfx_location=By Address
 STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7.tgfx_pixel_format=RGB888\:24
 STMicroelectronics.X-CUBE-TOUCHGFX.4.17.0_M7_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
 SYS.userName=SYS_M7
-USART3.IPParameters=VirtualMode-Asynchronous
-USART3.VirtualMode-Asynchronous=VM_ASYNC
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
